--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-    width: 500px;
+    width: 80%;
     font-family: 'Sacramento', cursive;
     font-weight: bold;
     color: #66BFBF;
@@ -116,7 +116,11 @@ a:hover {
     width: 40%;
     margin: 50px auto;
 }
-
+.contact-me {
+    width: 50%;
+    margin: auto;
+}
+    
 .copyright {
     color: #EAF6F6;
     font-size: 0.75rem;
